# rfxgen

./: .gitignore  LICENSE  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_webassembly.yml  build_windows.yml  linux.yml  macos.yml  webassembly.yml  windows.yml
logo/: rfxgen.icns  rfxgen.rc
projects/CMake/: CMakeLists.txt  README.md
projects/CMake/cmake/: FindRaylib.cmake
projects/CMake/macos/: rfxgen.plist.in
projects/VS2022/: rfxgen.sln
projects/VS2022/raylib/: Directory.Build.props  raylib.vcxproj
projects/VS2022/rfxgen/: rfxgen.vcxproj
release/linux/: rfxgen
src/: Info.plist  Makefile  README.txt  gui_file_dialogs.h  gui_main_toolbar.h  gui_window_about.h  gui_window_help.h  gui_window_sponsor.h  makefile  minshell.html  raylib_config.h  rfxgen.c  rfxgen.h  rfxgen.old.c  rfxgen.rc  rfxgen.rc.data  rfxgen_icon  style_candy.h  style_jungle.h  style_lavanda.h
src/layouts/: rfxgen_v130.rgl  rfxgen_v200.rgl  rfxgen_v200_REV.rgl  rfxgen_v300.rgl  window_about.rgl
